[package]
name = "cov-retrieve-vpp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
async-std = "*"
futures = "*"

